# site-of-care-optimization

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
config/: features.yaml  ui.yaml
results/: model_metrics.csv
results/tmp/: final_output.csv
src/siteofshift/: dashboard.py  data.py  feature_engineering.py  logger.py  main.py  modeling.py  scoring.py  segmetation.py  uplift.py  visualization.py
tests/: test_data.py  test_model.py  test_scoring.py
